<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/popupborder"
    tools:context="com.example.abheisenberg.cccliveschedule.Popups.HRContestDetails">

    <TextView
        android:id="@+id/tvHEOpensAtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/opens_at"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#bcbcbc"
        />

    <TextView
        android:id="@+id/tvHEOpensAtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvHEOpensAtHeading"
        android:text="Details"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="16sp"
        android:textColor="#bcbcbc"
        />

    <TextView
        android:id="@+id/tvHEClosesAtHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/closes_at"
        android:layout_below="@id/tvHEOpensAtText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#bcbcbc"
        />

    <TextView
        android:id="@+id/tvHEClosesAtText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvHEClosesAtHeading"
        android:text="Details"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="16sp"
        android:textColor="#bcbcbc"
        />


    <TextView
        android:id="@+id/tvHEDurationHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/duration"
        android:layout_below="@id/tvHEClosesAtText"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#bcbcbc"
        />

    <TextView
        android:id="@+id/tvHEDurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/tvHEDurationHeading"
        android:text="Details"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:fontFamily="sans-serif-condensed"
        android:textSize="16sp"
        android:textColor="#bcbcbc"
        />

    <TextView
        android:id="@+id/tvHEDescriptionHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/description_heading"
        android:layout_below="@id/tvHEDurationText"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="11dp"
        android:layout_marginRight="11dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="#bcbcbc"
        />

    <ScrollView
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvHEDescriptionHeading"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:layout_marginTop="5dp"
        >

        <TextView
            android:id="@+id/tvHELongTextDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Details"
            android:layout_marginLeft="11dp"
            android:layout_marginRight="11dp"
            android:fontFamily="sans-serif-condensed"
            android:textSize="16sp"
            android:textColor="#bcbcbc"
            />

    </ScrollView>

    <TextView
        android:id="@+id/tvWebsite"
        android:text="@string/gotowebsite"
        android:layout_marginRight="11dp"
        android:layout_marginLeft="11dp"
        android:layout_marginTop="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="5dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#5ca8ff"
        android:textSize="15sp"
        />

</RelativeLayout>
